INFS 2101 - Project - Fix Spacing

--- a/Year 2/INFS 2101/Project/css/style.css
+++ b/Year 2/INFS 2101/Project/css/style.css
@@ -433,6 +433,9 @@ input[type="checkbox"] {
 /* FaQ Page */
 
 .faq-questions {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
     margin-left:20px;
 }
 
